force-app/main/default/objects/NCMT_CEW_Project_Agency__c/NCMT_CEW_Project_Agency__c.object-meta.xml
<CustomObject>
    <label>CEW Project Agency</label>
    <nameField>
        <displayFormat>AB-{000}</displayFormat>
        <label>CEW Project Agency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEW Project Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>