force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Agency_Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Bureau_Name__c</fullName>
    <formula>PBS_AB_Code__r.Agency_Bureau_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Bureau Name</label>
    <type>Text</type>
</CustomField>