force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/GSF__c.field-meta.xml
<CustomField>
    <fullName>GSF__c</fullName>
    <label>GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>