force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/PBS_AB_Code__c.field-meta.xml
<CustomField>
    <fullName>PBS_AB_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBS AB Code</label>
    <referenceTo>PBS_AB_Code__c</referenceTo>
    <relationshipLabel>CEW Project Agencies</relationshipLabel>
    <relationshipName>CEW_Project_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>