force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/RWA_Funded_ECC__c.field-meta.xml
<CustomField>
    <fullName>RWA_Funded_ECC__c</fullName>
    <formula>(RWA_Funded_ECCA__c *  NCMT_Project__r.ECCMultiplier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RWA Funded ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>