force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/RWA_Funded_ECCA__c.field-meta.xml
<CustomField>
    <fullName>RWA_Funded_ECCA__c</fullName>
    <formula>(  Totals_RWA_Cost_W_O_MarkupF__c  *
NCMT_Project__r.CECAMultiplier__c *(1+NCMT_Project__r.Total_Escalation__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RWA Funded ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>