force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/RWA_Funded_Estimated_Total_Cost_USF__c.field-meta.xml
<CustomField>
    <fullName>RWA_Funded_Estimated_Total_Cost_USF__c</fullName>
    <formula>if( USF__c ==0,  RWA_Funded_Estimated_Total_Cost__c  , RWA_Funded_Estimated_Total_Cost__c / USF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RWA Funded - Estimated Total Cost/USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>