force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Estimated_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Estimated_Total_Cost__c</fullName>
    <formula>TI_Fit_Out_ECC__c +  TI_Management_Inspection_Cost__c +  TI_Design_and_Review_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI- Estimated Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>