force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Estimated_Total_Cost_Per_USF__c.field-meta.xml
<CustomField>
    <fullName>TI_Estimated_Total_Cost_Per_USF__c</fullName>
    <formula>if( USF__c ==0, TI_Estimated_Total_Cost__c , TI_Estimated_Total_Cost__c / USF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI - Estimated Total Cost /USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>