force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Fit_Out_ECC__c.field-meta.xml
<CustomField>
    <fullName>TI_Fit_Out_ECC__c</fullName>
    <formula>TI_Fit_Out_ECCA__c *  NCMT_Project__r.ECCMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Fit-Out ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>