force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Fit_Out_ECC_Unit_Cost_USF__c.field-meta.xml
<CustomField>
    <fullName>TI_Fit_Out_ECC_Unit_Cost_USF__c</fullName>
    <formula>if (USF__c == 0, TI_Fit_Out_ECC__c , TI_Fit_Out_ECC__c / USF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Fit-Out ECC Unit Cost/USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>