force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Security_Design_and_Review_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Security_Design_and_Review_Cost__c</fullName>
    <formula>TI_Security_ECC__c * NCMT_Project__r.EDRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Security-Design and Review Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>