force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Security_ECC_Unit_Cost_USF__c.field-meta.xml
<CustomField>
    <fullName>TI_Security_ECC_Unit_Cost_USF__c</fullName>
    <formula>if (USF__c == 0,  TI_Security_ECC__c  , TI_Security_ECC__c / USF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Security ECC Unit Cost/USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>