force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Security_ECCA__c.field-meta.xml
<CustomField>
    <fullName>TI_Security_ECCA__c</fullName>
    <formula>(Total_Security_Direct_Cost__c * 
NCMT_Project__r.CECAMultiplier__c *(1+NCMT_Project__r.Total_Escalation__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Security ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>