force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Security_Estimated_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Security_Estimated_Total_Cost__c</fullName>
    <formula>TI_Security_ECC__c +  TI_Security_Design_and_Review_Cost__c +  TI_Security_Management_Inspection__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Security - Estimated Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>