force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/TI_Security_Management_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TI_Security_Management_Inspection__c</fullName>
    <formula>TI_Security_ECC__c * NCMT_Project__r.EMIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Security - Management &amp; Inspection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>