force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Tier_Allow_Estimated_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tier_Allow_Estimated_Total_Cost__c</fullName>
    <formula>Total_Tier_Allowance__c +  Tier_Allowance_Design_and_Review_Cost__c +  Tier_Allow_Management_Inspection_Co__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Allow.- Estimated Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>