force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Tier_Allow_Estimated_Total_Cost_Per__c.field-meta.xml
<CustomField>
    <fullName>Tier_Allow_Estimated_Total_Cost_Per__c</fullName>
    <formula>if( USF__c ==0, 0,  Tier_Allow_Estimated_Total_Cost__c /USF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Allow. - Est. Total Cost/USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>