force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Tier_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Tier_Allowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tier Allowance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>