force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Tier_Allowance_Design_and_Review_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tier_Allowance_Design_and_Review_Cost__c</fullName>
    <formula>Total_Tier_Allowance__c *  NCMT_Project__r.EDRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Allowance - Design and Review Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>