force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Total_Security_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Security_Direct_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Totals TI Security Cost (W/O Markup)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>