force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Total_Tier_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Tier_Allowance__c</fullName>
    <formula>USF__c *  Tier_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tier Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>