force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Totals_RWA_Cost_W_O_MarkupF__c.field-meta.xml
<CustomField>
    <fullName>Totals_RWA_Cost_W_O_MarkupF__c</fullName>
    <formula>Totals_RWA_Direct_Cost__c + ( Totals_TI_Fit_Out_Direct_Cost__c -  Totals_TI_Fit_Out_Cost_W_O_MarkupF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totals RWA Cost (W/O Markup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>