force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Totals_RWA_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Totals_RWA_Direct_Cost__c</fullName>
    <label>Totals RWA Cost (W/O Markup)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>