force-app/main/default/objects/NCMT_CEW_Project_Agency__c/fields/Totals_TI_Fit_Out_Cost_W_O_MarkupF__c.field-meta.xml
<CustomField>
    <fullName>Totals_TI_Fit_Out_Cost_W_O_MarkupF__c</fullName>
    <formula>IF(Totals_TI_Fit_Out_Direct_Cost__c &gt;  USF__c *  Tier_Allowance__c , USF__c *  Tier_Allowance__c, Totals_TI_Fit_Out_Direct_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totals TI Fit-Out Cost (W/O Markup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>