force-app/main/default/objects/NCMT_CEW_Project_Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AB_Code__c</columns>
    <columns>PBS_AB_Code__c</columns>
    <columns>Display_Name__c</columns>
    <columns>NCMT_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>